kubernetes/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ${SERVICE_NAME}-${TRAVIS_BRANCH}
  #namespace: services
  labels:
    app: "${SERVICE_NAME}"
    chatChannel: "${TRAVIS_BRANCH}"
    serviceVersion: "${TRAVIS_BRANCH}-${TRAVIS_BUILD_NUMBER}"
spec:
  replicas: 1
  selector:
    matchLabels:
      app: "${SERVICE_NAME}"
      chatChannel: "${TRAVIS_BRANCH}"
  template:
    metadata:
      #namespace: services
      labels:
        app: "${SERVICE_NAME}"
        chatChannel: "${TRAVIS_BRANCH}"
        serviceVersion: "${TRAVIS_BRANCH}-${TRAVIS_BUILD_NUMBER}"
    spec:
      containers:
        - name: ${SERVICE_NAME}-${TRAVIS_BRANCH}
          image: eu.gcr.io/code-and-play/${DOCKER_IMAGE}
          imagePullPolicy: IfNotPresent
          ports:
          - name: http
            containerPort: 8080
