kubernetes/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: ${SERVICE_NAME}-${TRAVIS_BRANCH}
  #namespace: services
  labels:
    app: "${SERVICE_NAME}-${TRAVIS_BRANCH}"
spec:
  selector:
    app: "${SERVICE_NAME}-${TRAVIS_BRANCH}"
  ports:
  - port: 8080
    targetPort: 8080
    name: http
