kubernetes/virtualservice.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: ${SERVICE_NAME}-${TRAVIS_BRANCH}
spec:
  hosts:
  - "*"
  gateways:
  - service-gateway
  http:
  - match:
    - uri:
        prefix: /api/v1/channels/${TRAVIS_BRANCH}/messages
    rewrite:
      uri: /api/channels/${TRAVIS_BRANCH}/messages
    route:
    - destination:
        host: ${SERVICE_NAME}-${TRAVIS_BRANCH}
        port:
          number: 8080
